FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20150419:
AUTHOR: tijl@FreeBSD.org

  USE_AUTOTOOLS has been deprecated.  It can be replaced with USES=autoreconf
  and GNU_CONFIGURE=yes.

  Support for USE_AUTOTOOLS=libtoolize has been removed.  It can be replaced
  with "USES=autoreconf libtool".

20150409:
AUTHOR: bapt@FreeBSD.org

  Add a new USES=gnustep to handle the GNUstep ports. Now the dependencies on
  GNUstep libraries is done via the regular LIB_DEPENDS

  USE_GNUSTEP is now a macro that accept many arguments: back, build, gui, back
  Depending on the feature needed for a given port

  Reuse USES=objc to avoid duplicating code

20150408:
AUTHOR: bapt@FreeBSD.org

  Add a new USES=waf to handle the waf building system, allowing to factorise
  code. Plug waf into MAKE_CMD and CONFIGURE_CMD so the regular defined targets
  can be reused.

  Always define _MAKE_JOBS so that when bsd.port.mk will stop overwritting
  _MAKE_JOBS when parallel jobs are disabled we can enforce -j1 (which is needed
  to really disable parallelisation with waf

  WAF_CMD has been created to allow one to override the location of the waf
  script relatively to WRKSRC

  CONFIGURE_TARGET is by default defined to "configure"
  ALL_TARGET is by default defined to "build"
  INSTALL_TARGET is by default defined to "install"

  USES=waf is by default stagedir safe

20150407:
AUTHOR: bapt@FreeBSD.org

  USE_XZ and USE_BZIP2 are not supported anymore, they have been replaced by
  USES=tar:bzip2 and tar:xz

20150328:
AUTHOR: bapt@FreeBSD.org

  New "metaport" USES to take care of predefining correctly the needed
  macros as expected by meta ports.

20150323:
AUTHOR: bapt@FreeBSD.org
